...
    func loadTestAccessories() {
        
        let pic1 = UIImage(named: "ACC1")
        let acc1 = Accessories(image: pic1, desc: "SSD Samsung", sku: 464800, price: "59.99")
        
        let pic2 = UIImage(named: "ACC2")
        let acc2 = Accessories(image: pic2, desc: "HDD Seagate", sku: 464801, price: "41.99")
        
        let pic3 = UIImage(named: "ACC3")
        let acc3 = Accessories(image: pic3, desc: "GeForce GTX 970 4GB \"Black Edition\" Graphics Card", sku: 0, price: "289.99")
        
        let pic4 = UIImage(named: "ACC4")
        let acc4 = Accessories(image: pic4, desc: "GeForce GTX 970 4GB \"Infin8 Black Edition\" Graphics Card", sku: 0, price: "275.99")
        
        let pic5 = UIImage(named: "ACC5")
        let acc5 = Accessories(image: pic5, desc: "Bundle B6", sku: 464818, price: "399.99")
...
