...
    func loadTestPcs() {
        
        let pic1 = UIImage(named: "PC1")
        let pc1 = Pc(image: pic1, name: "GC1", graphics: "Radeon R7", cpu: "A6", hdd: 1, ssd:  0, ram:  8, sku: 464346, price: "499.99")
        
        let pic2 = UIImage(named: "PC2")
        let pc2 = Pc(image: pic2, name: "GC2", graphics: "GTX 950", cpu: "X4 860K", hdd: 1, ssd:  0, ram:  8, sku: 464365, price: "549.99")
        
        let pic3 = UIImage(named: "PC3")
        let pc3 = Pc(image: pic3, name: "GC3", graphics: "GTX 960 4GB", cpu: "X4 860K", hdd: 1, ssd:  0, ram:  8, sku: 464366, price: "599.99")
        
        let pic4 = UIImage(named: "PC4")
        let pc4 = Pc(image: pic4, name: "GC4", graphics: "GTX 960 4GB", cpu: "i3 6100", hdd: 2, ssd:  0, ram:  8, sku: 464565, price: "699.99")
...
